--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,15 @@
 body {
   background-color: antiquewhite;
+  font-family: -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    "Helvetica Neue",
+    Arial,
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
+    "Segoe UI Symbol";
 }
 
 .search-bar {
