--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,12 @@ body {
     "Segoe UI Symbol";
 }
 
+main {
+  padding-left: calc((100vw - 1068px)/2);
+  padding-top: 2rem;
+  width: 40rem;
+}
+
 
 .search-bar {
   position: relative;
@@ -23,6 +29,7 @@ body {
     ". error-message ."
     "sort-criterion sort-criterion sort-criterion";
   justify-items: start;
+  margin-bottom: 2rem;
 }
 
 .error-message {
@@ -44,6 +51,7 @@ body {
 }
 
 .sort-criterion {
+  margin-top: 0.75rem;
   grid-area: sort-criterion;
 }
 
@@ -52,6 +60,12 @@ body {
   grid-template-columns: auto;
 }
 
+
+.articles-container {
+  display: grid;
+  justify-items: start;
+  row-gap: 1rem;
+}
 
 .article-title {
   font-size: 1.25em;
@@ -65,7 +79,14 @@ body {
 .article-snippet {
   font-size: 0.875em;
   margin-top: 0;
+  margin-bottom: 0.1rem;
 }
 .article-snippet .searchmatch {
   font-weight: 600;
+}
+
+.article-metadata {
+  font-size: 0.75em;
+  margin: 0;
+  color: rgba(0, 0, 0, 0.6);
 }
